# zentra_wallet

./: .gitignore  LICENSE  README.md  pubspec.yaml  wallet.sh
.github/workflows/: build-artifacts.yml  build-native-linux.yml  ci.yml
android/app/: build.gradle.kts
android/app/src/main/: AndroidManifest.xml
android/app/src/main/kotlin/com/example/zentra_wallet/: MainActivity.kt
android/app/src/main/res/values/: strings.xml
docker/ubuntu22-native/: Dockerfile  build.sh
docs/: README.md  architecture.md  build-android.md  build-ios.md  build-linux.md  build-macos.md  build-windows.md  building-android.md  building.md  ci-pipeline.md  ci-troubleshooting.md  download-builds.md  faq.md  getting-started.md  native-ffi.md  networks-and-nodes.md  overview.md  project-structure.md  security.md  self-custody-model.md  troubleshooting.md  user-guide.md
ios/Runner/: Info.plist
ios/Runner.xcodeproj/: project.pbxproj
lib/: app.dart  main.dart
lib/core/: native_wallet_messages.dart  qr_payload_parser.dart  restore_height_utils.dart  seed_utils.dart  ui_format.dart  wallet_directory.dart  wallet_exception.dart  wallet_sync_progress.dart  zentra_assets.dart
lib/core/network/: rpc_address.dart  zentra_network.dart  zentra_public_nodes.dart
lib/core/rpc/: daemon_rpc_client.dart  wallet_rpc_client.dart
lib/models/: local_wallet_info.dart  wallet_backup_info.dart  wallet_models.dart  wallet_sync_status.dart
lib/providers/: wallet_provider.dart
lib/services/: embedded_wallet_service.dart  qr_scanner_launcher.dart  qr_scanner_support.dart  settings_store.dart  wallet_auto_store.dart  wallet_blockchain_jobs.dart  wallet_connection_watchdog.dart  wallet_native_snapshot.dart  wallet_native_worker.dart  wallet_service.dart  wallet_sync_coordinator.dart
lib/theme/: zentra_theme.dart
lib/ui/: network_ui.dart
lib/ui/screens/: home_screen.dart  node_setup_screen.dart  onboarding_screen.dart  qr_scanner_screen.dart  receive_screen.dart  restore_sync_height_screen.dart  rpc_setup_screen.dart  send_confirm_screen.dart  send_screen.dart  settings_screen.dart  splash_screen.dart  transactions_screen.dart  wallet_backup_screen.dart  wallets_screen.dart
lib/ui/widgets/: restore_height_field.dart  restore_height_settings_panel.dart  wallet_password_dialog.dart  zentra_ui.dart
linux/: CMakeLists.txt
linux/flutter/: generated_plugins.cmake
linux/runner/: my_application.cc
macos/Flutter/: GeneratedPluginRegistrant.swift
macos/Runner/: DebugProfile.entitlements  Info.plist  Release.entitlements
macos/Runner.xcodeproj/: project.pbxproj
macos/Runner.xcodeproj/xcshareddata/xcschemes/: Runner.xcscheme
macos/Runner/Configs/: AppInfo.xcconfig  Signing.xcconfig.example
native/zentra_wallet_ffi/: CMakeLists.txt
native/zentra_wallet_ffi/cmake/: ZentraDepends.cmake  ios.toolchain.cmake
native/zentra_wallet_ffi/include/: zentra_wallet_ffi.h
native/zentra_wallet_ffi/src/: zentra_wallet_ffi.cpp
scripts/: build_and_run.sh  build_native_wallet.sh  ci-apply-native-libs.sh  ci-build-native-engine-macos.sh  ci-build-native-engine-ubuntu.sh  ci-clone-zentra.sh  ci-configure-mingw-posix.sh  ci-install-linux-deps.sh  ci-package-native-engine.sh  ci-patch-zentra-depends.sh  ci-preflight-engine.sh  ci-stage-release-assets.sh  ci-verify-android-apk.sh  ci-verify-native-engine.sh  ci-verify-windows-release.sh  clean_wallet_data.sh  generate_app_icons.py  start_wallet_rpc_testnet.sh  wallet.sh
scripts/lib/: android_libcxx.sh  build_apps.sh  clean_data.sh  docker_native.sh  flutter_run.sh  install_docker.sh  native_build.sh  native_build_android.sh  native_build_common.sh  native_build_ios.sh  native_build_ios_deps.sh  native_build_macos.sh  native_build_mingw.sh
scripts/patches/zentra/: miner-ios-iokit.patch  ringdb-macos-sandbox.patch
scripts/patches/zentra-depends/: boost-clang-coalesce.patch  darwin-native-sdk.patch  zeromq-mingw.patch
test/: qr_payload_parser_test.dart  wallet_blockchain_jobs_test.dart  wallet_directory_test.dart  wallet_provider_logic_test.dart  wallet_sync_coordinator_test.dart  wallet_sync_status_test.dart  widget_test.dart
web/: index.html  manifest.json
windows/: CMakeLists.txt
windows/flutter/: generated_plugins.cmake
windows/runner/: Runner.rc  main.cpp
